--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       align-items: center;
       flex-direction: column
     }
+    img {
+      max-height:720px;
+      max-width:1080px;
+    }
 
     canvas {
       position: absolute;
